<resources>
    <string name="app_name">Fury</string>
    <string name="Addition_symbol">+</string>
    <string name="account_balance">Total Balance</string>
    <string name="total_expense_today">Total Expense Today</string>
    <string name="expense_limit">Expense Limit</string>
    <string name="expense_history">Expense History</string>
    <string name="days_left">Days Left</string>
    <string name="dues_overview">Dues Overview</string>
    <string name="category_overview">Category Overview</string>
    <string name="daily_average">Daily Average</string>
    <string name="expense">Expense</string>
    <string name="budget">Budget</string>
    <string name="expense_overview">Overview</string>
    <string name="back">Back</string>
    <string name="version">1.0.0</string>
    <string name="login_frm_signup">Already have account? <u>login</u></string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="top_categories">Top Categories</string>
    <string-array name="catOvrAvg_items">
        
        <item>Today\'s Report</item>
        <item>Monthly Report</item>
        <item>Yearly Report</item>
    </string-array>
    <string-array name="ExpenseItems">
        <item>Food</item>
        <item>Groceries</item>
        <item>Travel</item>
        <item>Gas</item>
        <item>Rent</item>
        <item>Electricity</item>
        <item>Recharge</item>
        <item>Fees</item>
        <item>Subscriptions</item>
        <item>Health Care</item>
        <item>Bills</item>
        <item>Others</item>

    </string-array>
    <string name="fury_desc">Money management made easy</string>
    <string name="log_in">Log In</string>
    <string name="current_balance">Budget Balance</string>
    <string name="total_expense">Total Expense</string>
    <string name="my_budget">My Budget</string>
    <string name="Budget_rule">“Do not save what is left after spending \ninstead spend what is left after saving." - <u>Warren Buffett</u></string>
    <string name="help_support"><![CDATA[Help & support]]></string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="reset_txt">Please enter your registered mail ID.</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="forgot_password">Forgot password?</string>
    <string name="forgot_pass">Forgot\nPassword</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="welcome_nback">Welcome\nBack</string>
    <string name="name">Name</string>
    <string name="create_password">Create Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="notifications">Notifications</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="about_fury">About Fury</string>
    <string name="about_us">About Us</string>
    <string name="account_settings">Account</string>
    <string name="no_expenses">No Expenses</string>
    <string name="example_email_com">example@email.com</string>
    <string name="send_mail">Send mail</string>
    <string name="new_due">New Due</string>
    <string name="due_name">Due Name</string>
    <string name="select_date">Select Date</string>
    <string name="salary_source">Source</string>
    <string name="select_pay_period">Pay period</string>
    <string name="bank_account">Bank Account</string>
    <string name="cash">Cash</string>
    <string name="credit_mode">Credit mode</string>
    <string name="amount">Amount</string>
    <string name="onetime">OneTime</string>
    <string name="monthly">Monthly</string>
    <string name="daily">Daily</string>
    <string name="hourly">Hourly</string>
    <string name="update">Update</string>
    <string name="later">Later</string>
    <string name="update_your_app">Update your app</string>
    <string name="to_enjoy_our_latest_features_nplease_update_the_app">To enjoy our latest features\nplease update the app</string>
    <string name="edit_amount">Edit amount</string>
    <string name="add_new_amount">Add new amount</string>
    <string name="rupee">₹</string>
    <string name="set_budget">Set Budget</string>
    <string name="total_income">Total Income</string>
    <string name="your_income">Your Income</string>
    <string name="edit_your_budget">Edit your Budget</string>
    <string name="dailyavgnotsetpop">Daily average needs to collect data which is processed within 7 days of usage.</string>
    <string name="cont">Continue</string>
    <string name="dlt_text">This will delete the particular expense and update the balance</string>
    <string name="dlt_qus">Do you want to delete this expense?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="have_you_done_the_payment">Have you done the payment?</string>
    <string name="this_will_set_your_payment_status_to_paid">This will set your payment status to paid</string>
    <string name="contact_us">Contact us</string>
    <string name="faq">FAQ</string>
    <string name="report_a_problem">Report a problem</string>
    <string name="total_earnings">Total Earnings</string>
    <string name="sources">Source</string>
    <string name="account_earnings">Bank Earnings</string>
    <string name="cash_earnings">Cash Earnings</string>
    <string name="cash_expenses">Cash Expenses</string>
    <string name="account_expenses">Bank Expenses</string>
    <string name="total">Total</string>
    <string name="count">Count</string>
    <string name="earnings_category">Earnings History</string>
    <string name="learn_with_fury">Learn with Fury</string>
    <string name="expense_name">Expense Name</string>
    <string name="cashTitle">Cash</string>
    <string name="accountTitle">Bank</string>
    <string name="fury_monitor_dues_debt">Fury Monitor/Dues</string>
    <string name="checkbox_text">Repeat on this day</string>
    <string name="fury_statistics">Fury Statistics</string>
    <string name="activate_to_see_daily_statitics">Activate to see daily statitics</string>
    <string name="support_video_ad">Support our devolopers by watching a short video ad!</string>
    <string name="title_activity_splash">splash</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">TITLE</string>
    <string name="new_expense">New expense</string>
    <string name="add">Add</string>
    <string name="let_fury_create_your_ideal_budget">Let fury create your ideal budget</string>
    <string name="reccurence">Reccurence</string>
    <string name="weekly">Weekly</string>
    <string name="starts_on">Starts on</string>
    <string name="no_thanks_i_will_do_it_myself">No thanks, I will do it myself</string>
    <string name="create_your_budget">Create your Budget</string>
    <string name="budget_type">Budget Type</string>
    <string name="select_start_date">Select Start date</string>
    <string name="or">or</string>
    <string name="budget_smart">Budget Smart</string>
    <string name="status">Status</string>
    <string name="due_date">Due date</string>
    <string name="dues_amp_debts"><![CDATA[Dues & debts]]></string>
    <string name="you_can_easily_keep_track_of_your_dues_and_debt_and_set_reminders_for_upcoming_payments_fury_also_alert_you_before_due_date_so_you_won_t_miss_any_payments_in_accident">You can easily keep track of your dues and debt, and set reminders for upcoming payments. Fury also alert you before due-date so you won\'t miss any payments in accident.</string>
    <string name="previous">Previous</string>
    <string name="you_can_add_your_income_sources_and_track_your_earnings_over_time_fury_let_you_add_earnings_as_in_cash_or_through_bank_for_better_tracking">You can add your Income sources and track your earnings over time. Fury let you add earnings as In-cash or Through-bank for better tracking.</string>
    <string name="earnings_tracker">Earnings Tracker</string>
    <string name="expense_tracker">Expense Tracker</string>
    <string name="you_can_easily_log_your_daily_expenses_and_categorize_them_for_better_organization_and_management_of_your_finances_with_a_simplified_user_interface">You can easily log your daily expenses and categorize them for better organization and management of your finances. With a simplified user interface</string>
    <string name="skip">Skip</string>
    <string name="fury_monitor_budget">Fury Monitor/Budget</string>
    <string name="ideal_daily_limit">Ideal daily Limit</string>
    <string name="current_average">Current Average</string>
    <string name="top_expense_categories">Top expense categories</string>
    <string name="ad">Ad</string>
    <string name="total_amount_due">Total Amount Due</string>
    <string name="upcoming_dues">Upcoming Dues</string>
    <string name="repeating_dues">Repeating Dues</string>
    <string name="fury_monitor_earnings">Fury Monitor/Earnings</string>
    <string name="fury_monitor_expense">Fury Monitor/Expense</string>
    <string name="today_s_expenses">Today\'s expenses</string>
    <string name="earnings">Earnings</string>
    <string name="view_all">View All</string>
    <string name="balance">Balance</string>
    <string name="bank">Bank</string>
    <string name="great_there_s_no_pending_dues">Great! There\'s No Pending Dues.</string>
    <string name="edit_profile">Edit profile</string>
    <string name="user">User</string>
    <string name="save">save</string>
    <string name="discard">discard</string>
    <string name="no_new_notifications">No new notifications</string>
    <string name="settings">Settings</string>
    <string name="utilities">Utilities</string>
    <string name="clear_all_data">Clear all data</string>
    <string name="watch">Watch</string>
    <string name="no_thanks">No Thanks</string>
    <string name="this_will_result_in">This will result in</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="this_expense_will_be_deleted">This expense will be deleted!</string>
    <string name="set_profile_picture">Set Profile picture</string>
    <string name="your_current_expense_rate_is_too_high">Your current expense rate is too high!</string>
    <string name="expense_details">Expense Details</string>
    <string name="category">Category:</string>
    <string name="amount_">Amount:</string>
    <string name="other_details">Other details</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="day">Day</string>
    <string name="your_due_of_due_name_is_nearing_its_pay_date">Your due of (DUE_NAME) is nearing its pay date..</string>
    <string name="have_you_already_cleared_this_due">Have you already cleared this due?</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="salary">salary</string>
    <string name="r">R</string>
    <string name="rent">Rent</string>
    <string name="welcome_to_fury">Welcome to fury</string>
    <string name="noti_ex">Hey you! we heartly welcome you to the fury family.</string>
    <string name="hello_user">Hello User</string>
</resources>