<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="0dp"
    android:layout_margin="12dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_support"
        android:layout_margin="12dp"
        android:textSize="18sp" />

    <Button
        android:id="@+id/Contact_us"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:background="@drawable/button_settings"
        android:drawableLeft="@drawable/common_icon_contactus"
        android:gravity="start|center"
        android:text="@string/contact_us"
        android:textAllCaps="false"
        android:textSize="14sp"
        tools:ignore="RtlHardcoded,TextContrastCheck,VisualLintButtonSize" />

    <Button
        android:id="@+id/faq"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:background="@drawable/button_settings"
        android:drawableLeft="@drawable/common_icon_faq"
        android:gravity="start|center"
        android:text="@string/faq"
        android:textAllCaps="false"
        android:textSize="12sp"
        tools:ignore="RtlHardcoded,TextContrastCheck,VisualLintButtonSize" />

    <Button
        android:id="@+id/feedback"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:background="@drawable/button_settings"
        android:drawableLeft="@drawable/common_icon_bug"
        android:gravity="start|center"
        android:text="@string/report_a_problem"
        android:textAllCaps="false"
        android:textSize="14sp"
        tools:ignore="RtlHardcoded,TextContrastCheck,VisualLintButtonSize" />

</LinearLayout>