<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="0dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/Contact_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_us"
        android:textSize="14sp"
        android:layout_margin="12dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height=".1dp"
        android:layout_marginStart="12dp"
        android:background="?attr/colorPrimaryVariant" />


    <TextView
        android:id="@+id/faq"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/faq"
        android:textSize="14sp"
        android:layout_margin="12dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height=".1dp"
        android:layout_marginStart="12dp"
        android:background="?attr/colorPrimaryVariant"
        />

    <TextView
        android:id="@+id/feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/report_a_problem"
        android:textSize="14sp"
        android:layout_margin="12dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height=".1dp"
        android:layout_marginStart="12dp"
        android:background="?attr/colorPrimaryVariant" />

    <WebView
        android:id="@+id/helpweb"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />
</LinearLayout>