<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/init_bg"
    android:orientation="vertical"
    tools:context=".ui.User_Init.signUp.signUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/cBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginTop="70dp"
            android:background="@android:color/transparent"
            android:padding="12dp"
            android:src="@drawable/common_icon_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="70sp"
            android:fontFamily="@font/raleway_bold"
            android:text="Create\nAccount"
            android:textSize="22sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/u_name"
                android:layout_width="300dp"
                android:layout_height="?actionBarSize"
                android:drawableEnd="@drawable/common_icon_person"
                android:fontFamily="@font/raleway_semibold"
                android:hint="@string/name"
                android:singleLine="true"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/u_mail"
                android:layout_width="300dp"
                android:layout_height="?actionBarSize"
                android:drawableEnd="@drawable/common_icon_mail"
                android:fontFamily="@font/raleway_semibold"
                android:hint="@string/email"
                android:singleLine="true"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/u_pass1"
                android:layout_width="300dp"
                android:layout_height="?actionBarSize"
                android:drawableEnd="@drawable/common_icon_password"
                android:fontFamily="@font/raleway_semibold"
                android:hint="@string/create_password"
                android:inputType="textPassword"
                android:longClickable="false"
                android:singleLine="true"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/u_pass2"
                android:layout_width="300dp"
                android:layout_height="?actionBarSize"
                android:drawableEnd="@drawable/common_icon_eyeclose"
                android:fontFamily="@font/raleway_semibold"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:longClickable="false"
                android:singleLine="true"
                android:textSize="16sp" />

            <Button
                android:id="@+id/s_btn"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_login"
                android:fontFamily="@font/raleway_semibold"
                android:text="@string/sign_up"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/to_login"
                style="@style/linkcolor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/login_frm_signup" />

        </LinearLayout>
    </ScrollView>
    </LinearLayout>
    <ProgressBar
        android:id="@+id/progress"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />
</FrameLayout>