<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="0dp"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_us"
                android:layout_margin="12dp"
                android:textSize="18sp" />

            <Button
                android:id="@+id/p_policies"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:background="@drawable/button_settings"
                android:drawableLeft="@drawable/common_icon_privacy"
                android:gravity="start|center"
                android:text="@string/privacy_policy"
                android:textAllCaps="false"
                android:textSize="14sp"
                tools:ignore="RtlHardcoded,TextContrastCheck,VisualLintButtonSize" />


            <Button
                android:id="@+id/t_c"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:background="@drawable/button_settings"
                android:drawableLeft="@drawable/common_icon_file"
                android:gravity="start|center"
                android:text="@string/terms_conditions"
                android:textAllCaps="false"
                android:textSize="14sp"
                tools:ignore="RtlHardcoded,TextContrastCheck,VisualLintButtonSize" />

            <Button
                android:id="@+id/app_info"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:background="@drawable/button_settings"
                android:drawableLeft="@drawable/common_icon_about"
                android:gravity="start|center"
                android:text="@string/about_fury"
                android:textAllCaps="false"
                android:textSize="14sp"
                tools:ignore="RtlHardcoded,TextContrastCheck,VisualLintButtonSize" />

        </LinearLayout>
</FrameLayout>