<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/init_bg"
    android:orientation="vertical"
    tools:context=".UI.User_Init.login.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginTop="70sp"
            android:background="@android:color/transparent"
            android:padding="12dp"
            android:src="@drawable/common_icon_back"
            tools:ignore="ContentDescription,ImageContrastCheck,SpeakableTextPresentCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="70sp"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/forgot_pass"
            android:textSize="22sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:gravity="start"
                android:text="@string/reset_txt"
                android:textSize="18sp" />


        <EditText
            android:id="@+id/email"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:hint="@string/example_email_com"
            android:layout_margin="12dp"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="12dp"
            android:textSize="14sp"
            tools:ignore="Autofill" />

            <Button
                android:id="@+id/passchange"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_login"
                android:text="@string/send_mail"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck,VisualLintButtonSize" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>