<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/init_bg"
    android:orientation="vertical"
    tools:context=".UI.User_Init.login.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="140dp"
                android:layout_marginTop="70sp"
                android:background="@android:color/transparent"
                android:padding="12dp"
                android:src="@drawable/common_icon_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="70sp"
                android:text="@string/welcome_nback"
                android:textSize="20sp" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/l_mail"
                    android:layout_width="300dp"
                    android:layout_height="?actionBarSize"
                    android:hint="@string/email"
                    android:longClickable="false"
                    android:singleLine="true"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/l_pass"
                        android:layout_width="300dp"
                        android:layout_height="?actionBarSize"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:longClickable="false"
                        android:singleLine="true"
                        android:drawableRight="@drawable/common_icon_eyeclose"
                        android:textSize="16sp" />


                </LinearLayout>

                <TextView
                    style="@style/linkcolor"
                    android:id="@+id/f_pass"
                    android:layout_marginTop="10dp"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/forgot_password" />

                <Button
                    android:id="@+id/l_btn"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/button_login"
                    android:fontFamily="@font/raleway_semibold"
                    android:text="@string/log_in"
                    android:textSize="16sp" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <ProgressBar
        android:id="@+id/progress"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />
</FrameLayout>